# auth_authorization

./: .gitignore  README.md  main.py  pyproject.toml  xpl_.env  xpl_azure_data.json
auth_azure/: Untitled-1.json  __init__.py  app.py
auth_azure/config/: collections_exceptions.py  log.py  settings.py
auth_azure/data/: database.py  models.py  schemas.py
auth_azure/modules/: token_manage.py
auth_azure/routers/: auth.py
